--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "license": "MIT",
   "scripts": {
     "deploy": "brunch build --production",
-    "watch": "brunch watch --stdin"
+    "watch": "brunch watch --stdin",
+    "test": "elm-test ./test/elm/Main.elm"
   },
   "dependencies": {
     "elm": "^0.18.0",
