try caching elm-stuff build artifacts for tests

--- a/circle.yml
+++ b/circle.yml
@@ -4,6 +4,7 @@ machine:
 dependencies:
   cache_directories:
     - ~/.asdf
+    - test/elm/elm-stuff/build-artifacts
   pre:
     - if ! asdf | grep version; then git clone https://github.com/HashNuke/asdf.git ~/.asdf; fi
     - if ! asdf plugin-list | grep erlang; then asdf plugin-add erlang https://github.com/HashNuke/asdf-erlang.git; fi
