--- a/circle.yml
+++ b/circle.yml
@@ -4,7 +4,6 @@ machine:
 dependencies:
   cache_directories:
     - ~/.asdf
-    - test/elm/elm-stuff/build-artifacts
   pre:
     - if ! asdf | grep version; then git clone https://github.com/HashNuke/asdf.git ~/.asdf; fi
     - if ! asdf plugin-list | grep erlang; then asdf plugin-add erlang https://github.com/HashNuke/asdf-erlang.git; fi
@@ -13,6 +12,7 @@ dependencies:
     - elixir_version=$(awk '/elixir/ { print $2 }' .tool-versions) && asdf install elixir ${elixir_version}
     - yes | mix deps.get
     - yes | mix local.rebar
+    - npm run elm-test-install
 test:
   override:
     - mix test && npm test
