--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "scripts": {
     "deploy": "brunch build --production",
     "watch": "brunch watch --stdin",
-    "test": "elm-test ./test/elm/Main.elm"
+    "test": "elm-test ./test/elm/Main.elm",
+    "elm-test-install": "cd test/elm && elm-package install -y"
   },
   "dependencies": {
     "elm": "^0.18.0",
