--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "deploy": "brunch build --production",
     "watch": "brunch watch --stdin",
     "test": "elm-test ./test/elm/Main.elm",
-    "elm-test-install": "cd test/elm && elm-package install -y"
+    "elm-test-install": "cd test/elm && elm-package install -y && elm-make Main.elm"
   },
   "dependencies": {
     "elm": "^0.18.0",
