--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "clean-css-brunch": "~2.0.0",
     "css-brunch": "~2.0.0",
     "elm-brunch": "^0.8.0",
-    "elm-test": "^0.18.2",
+    "elm-test": "0.18.2",
     "javascript-brunch": "~2.0.0",
     "postcss-brunch": "^2.0.5",
     "postcss-clean": "^1.0.2",
